--- a/app/components/form-fields/single-select-field/single-select.component.html
+++ b/app/components/form-fields/single-select-field/single-select.component.html
@@ -1,10 +1,9 @@
 <div [formGroup]="field" class="form-group label-floating select-component always-visible">
     <label class="control-label">{{options.title}}</label>
     <select class="custompicker"
-            title="{{field.value.Name || options.default}}"
             [formControl]="field"
             data-style="select-with-transition"
             data-size="7">
-            <option *ngFor="let item of dataList" [ngValue]="item">{{item.Name}}</option>
+            <option *ngFor="let item of dataList" [ngValue]="item"></option>
     </select>
 </div>
