--- a/app/modules/form-fields/input-field/input-field.component.html
+++ b/app/modules/form-fields/input-field/input-field.component.html
@@ -5,5 +5,13 @@
            [type]="data.type"
            class="form-control"
            [formControl]="field">
+    <div *ngIf="field.errors" class="errors">
+        <div *ngIf="field.errors.serverError.length == 1" class="error-list">
+            <p *ngFor="let err of field.errors.serverError; let i of index" class="text-danger">{{err}}</p>
+        </div>
+        <ol *ngIf="field.errors.serverError.length > 1" class="error-list">
+            <li *ngFor="let err of field.errors.serverError; let i of index" class="text-danger">{{err}}</li>
+        </ol>
+    </div>
 </div>
 
