--- a/app/layout/layout.component.html
+++ b/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
+    <div class="sidebar" data-active-color="white">
         <app-sidebar></app-sidebar>
         <div class="sidebar-background primary-color"></div>
     </div>
