--- a/app/components/enquiry/property-info/property-info.component.html
+++ b/app/components/enquiry/property-info/property-info.component.html
@@ -10,15 +10,17 @@
                           crop="fill"
                           gravity="auto"
                           quality="80"
-                          height="200"
+                          height="150"
                           width="600"
                           format="jpg">
                 </cl-image>
-                <img *ngIf="!propertiesService.property.Images[0]" class="img" src="../assets/img/image_placeholder.jpg">
+                <img *ngIf="!propertiesService.property.Images[0]" height="150" class="img" src="../assets/img/image_placeholder.jpg">
             </div>
         </div>
         <div class="villa-container left">
-            <div class="enquiry-status declined">Declined</div>
+            <div *ngIf="data.DeclinedAt" class="enquiry-status declined">Declined</div>
+            <div *ngIf="data.CancelledAt" class="enquiry-status declined">Cancelled</div>
+            <div *ngIf="data.Proposal && data.Proposal.AcceptedAt" class="enquiry-status accepted">Accepted</div>
             <h4 class="enquiry-title">{{propertiesService.property.Name}}</h4>
             <p class="location"><i class="material-icons">place</i> {{propertiesService.property.Region.Name}}</p>
         </div>
