--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -193,6 +193,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .p-r-15 {
 	padding-right: 15px !important;
 }
+.p-r-30 {
+	padding-right: 30px !important;
+}
 .p-b-none {
 	padding-bottom: 0px !important;
 }
