--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <div class="input-group p-r-15">
+                    <div class="input-group p-r-30">
                         <span class="input-group-addon"><i class="material-icons">location_city</i></span>
                         <input-field-cmp [data]="{title: 'Property', type: 'text'}"
                                          [field]="proposalManagerForm.controls.PropertyName"></input-field-cmp>
@@ -44,9 +44,11 @@
                                               [field]="proposalManagerForm.controls.CheckIn"></datetimepicker-field-cmp>
                 </div>
                 <div class="col-xs-6 normalize-datetitme">
-                    <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
-                                              [classes]="{withIcon: true}"
-                                              [field]="proposalManagerForm.controls.CheckOut"></datetimepicker-field-cmp>
+                    <div class="p-r-15">
+                        <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
+                                                  [classes]="{withIcon: true}"
+                                                  [field]="proposalManagerForm.controls.CheckOut"></datetimepicker-field-cmp>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -63,7 +65,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <div class="input-group booking-price p-r-15">
+                    <div class="input-group booking-price p-r-30">
                         <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                         <div class="form-group label-floating">
                             <label class="control-label"></label>
@@ -87,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-r-15">
+                    <div class="input-group p-r-30">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating select-component always-visible">
                             <label class="control-label">Cancellation Policy Contract</label>
@@ -206,7 +208,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <div class="input-group p-r-15">
+                    <div class="input-group p-r-30">
                         <span class="input-group-addon"><i class="material-icons">location_city</i></span>
                         <input-field-cmp [data]="{title: 'Property', type: 'text'}"
                                          [field]="proposalManagerForm.controls.PropertyName"></input-field-cmp>
@@ -222,7 +224,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <div class="input-group p-r-15">
+                    <div class="input-group p-r-30">
                         <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
                         <input-field-cmp [data]="{title: 'CheckOut', type: 'text'}"
                                          [field]="proposalManagerForm.controls.CheckOut"></input-field-cmp>
@@ -250,7 +252,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-r-15">
+                    <div class="input-group p-r-30">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating">
                             <label class="control-label">Cancellation Policy Contract</label>
