--- a/app/components/tables/enquiries/enquiries.component.html
+++ b/app/components/tables/enquiries/enquiries.component.html
@@ -25,7 +25,7 @@
             </tr>
         </tfoot>
         <tbody>
-            <tr *ngFor="let item of data; let i = index; let last = last" [ngClass]="{unread: item.UnreadCount}" [routerLink]="['/message/dialogs', item.ThreadId]">
+            <tr *ngFor="let item of data; let i = index; let last = last" [ngClass]="{unread: item.UnreadCount}" [routerLink]="['/message/enquiry', item.ThreadId]">
             <td>
                 <span class="badge" *ngIf="item.UnreadCount">{{item.UnreadCount}}</span>
             </td>
