Booking price field

--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -68,7 +68,7 @@
                     <div class="input-group booking-price p-r-30">
                         <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                         <div class="form-group label-floating">
-                            <label class="control-label"></label>
+                            <label class="control-label">Booking price</label>
                             <span class="form-control-static text-left">
                             {{proposalManagerForm.controls.RentalCost.value + proposalManagerForm.controls.Fees.value}}
                         </span>
