--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -352,19 +352,23 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 .select-component .bootstrap-select .btn.dropdown-toggle {
 	height: 36px;
-	padding: 7px 0;
-	padding-left: 5px !important;
+	padding: 7px 28px 7px 5px !important;
 	color: #3a3a3a !important;
-	font-size: 14px;
 }
 .select-component .bootstrap-select .btn.dropdown-toggle span {
 	color: #3a3a3a !important;
 	font-size: 14px;
 }
+.select-component .bootstrap-select .btn.dropdown-toggle .caret {
+	color: #0b5a7c !important;
+	right: 10px;
+}
+
 .select-component .select-with-transition .caret, .select-component .select-with-transition .ripple-container {
 	display: inline-block;
 }
 .select-with-transition {
+	background-position: center bottom, center 100%;
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc) !important;
 }
 .select-with-transition.disabled {
@@ -458,6 +462,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 .normalize-datetitme:last-child .input-group {
 	padding-right: 15px;
+}
+.select-with-transition .caret {
+	display: block;
+	color: #0b5a7c;
+	right: 10px;
 }
 /**
  * Custom button
