Dashboard Property Card - Incorrect icons

--- a/app/components/enquiry/property-info/property-info.component.html
+++ b/app/components/enquiry/property-info/property-info.component.html
@@ -34,7 +34,7 @@
             <div class="col-xs-12">
                 <div class="icons-group">
                     <div class="feature">
-                        <i class="material-icons">pool</i><span>{{propertiesService.property.Bathrooms}}</span>
+                        <i class="material-icons">hot_tub</i><span>{{propertiesService.property.Bathrooms}}</span>
                     </div>
                     <div class="feature">
                         <i class="material-icons">hotel</i><span>{{propertiesService.property.Bedrooms}}</span>
