--- a/app/components/modal/enquiry/enquiry.component.html
+++ b/app/components/modal/enquiry/enquiry.component.html
@@ -23,16 +23,13 @@
                 <div class="modal-body m-t-none p-t-none">
                     <div class="icons-group">
                         <div class="feature">
-                            <i class="material-icons">pool</i>
-                            <span class="">{{data.Bathrooms}}</span>
+                            <i class="material-icons">hot_tub</i><span class="">{{data.Bathrooms}}</span>
                         </div>
                         <div class="feature">
-                            <i class="material-icons">hotel</i>
-                            <span class="">{{data.Bedrooms}}</span>
+                            <i class="material-icons">hotel</i><span class="">{{data.Bedrooms}}</span>
                         </div>
                         <div class="feature">
-                            <i class="material-icons">group</i>
-                            <span class="">{{data.Sleeps}}</span>
+                            <i class="material-icons">group</i><span class="">{{data.Sleeps}}</span>
                         </div>
                     </div>
                     <div class="row">
