--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -44,16 +44,13 @@
         </div>
         <div class="card-feature">
             <div class="feature">
-                <i class="material-icons">pool</i>
-                <span class="">{{villa.Bedrooms}}</span>
+                <i class="material-icons">hot_tub</i><span class="">{{villa.Bathrooms}}</span>
             </div>
             <div class="feature">
-                <i class="material-icons">hotel</i>
-                <span class="">{{villa.Sleeps}}</span>
+                <i class="material-icons">hotel</i><span class="">{{villa.Bedrooms}}</span>
             </div>
             <div class="feature">
-                <i class="material-icons">group</i>
-                <span class="">{{villa.Bathrooms}}</span>
+                <i class="material-icons">group</i><span class="">{{villa.Sleeps}}</span>
             </div>
         </div>
     </div>
