--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -39,13 +39,13 @@
                     <div class="col-xs-4">
                         <singleselect-field-cmp *ngIf="propertiesService.companies.length || propertyForm.controls.ManagementCompany.value"
                                                 [dataList]="propertiesService.companies"
-                                                [options]="{title: 'Management Company', default: 'Select Company'}"
+                                                [options]="{title: 'Management Company*', default: 'Select Company'}"
                                                 [field]="propertyForm.controls.ManagementCompany"></singleselect-field-cmp>
                     </div>
                     <div class="col-xs-4">
                         <singleselect-field-cmp *ngIf="propertiesService.managers.length || propertyForm.controls.ManagerUser.value"
                                                 [dataList]="propertiesService.managers"
-                                                [options]="{title: 'Manager', default: 'Select Manager'}"
+                                                [options]="{title: 'Manager*', default: 'Select Manager'}"
                                                 [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
                     </div>
                 </div>
