--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -367,9 +367,18 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .select-component .select-with-transition .caret, .select-component .select-with-transition .ripple-container {
 	display: inline-block;
 }
-.select-with-transition {
+.form-group .select-with-transition {
 	background-position: center bottom, center 100%;
-	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc) !important;
+	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+	background-size: 0 2px, 100% 1px;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	transition: background 0s ease-out;
+}
+.form-group .open .select-with-transition {
+	background-size: 100% 2px, 100% 1px;
+	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
+	transition-duration: 0.3s;
 }
 .select-with-transition.disabled {
 	background-image: none !important;
@@ -429,11 +438,13 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 
 .form-group.form-error .form-control,
+.form-group.form-error .select-with-transition,
 .form-group.form-error.is-focused .form-control,
+.form-group.form-error.is-focused .select-with-transition,
 .form-group.has-error .form-control,
 .form-group.has-error.is-focused .form-control,
 .input-group.form-error .form-group .form-control,
-.input-group.form-error .form-group.is-focused .form-control{
+.input-group.form-error .form-group.is-focused .form-control {
 	background-image: linear-gradient(#b71c1c, #b71c1c), linear-gradient(#5399bc, #5399bc);
 	background-size: 100% 2px, 100% 1px;
 	transition-duration: 0.3s;
