--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -237,19 +237,19 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="form-group label-floating"[ngClass]="{'form-error':!propertyForm.controls['Bathrooms'].valid && errorForm}">
-                            <label class="control-label">Number of Bathrooms</label>
+                            <label class="control-label">Number of Bathrooms*</label>
                             <input type="number" class="form-control" formControlName="Bathrooms">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="form-group label-floating" [ngClass]="{'form-error':!propertyForm.controls['Bedrooms'].valid && errorForm}">
-                            <label class="control-label">Number of bedrooms</label>
+                            <label class="control-label">Number of bedrooms*</label>
                             <input type="number" class="form-control" formControlName="Bedrooms">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="form-group label-floating" [ngClass]="{'form-error':!propertyForm.controls['Sleeps'].valid && errorForm}">
-                            <label class="control-label">Sleeps</label>
+                            <label class="control-label">Sleeps*</label>
                             <input type="number" class="form-control" formControlName="Sleeps">
                         </div>
                     </div>
