--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -298,7 +298,7 @@
         </div>
         <!--no proposal agent buttons end-->
         <!--proposal agent buttons-->
-        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
+        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt && !data.Enquiry.Proposal.AcceptedAt && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
             <div class="col-xs-6">
                 <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelProposal()">Cancel</button>
             </div>
